src/objects/General_Information__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Article Type to detail and communicate information that is NOT Product Line/Job/Functional Specific, but applicable to LZ Operations overall.</description>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>For manual entry of due date by content developer</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External__c</fullName>
        <label>External</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQ__c</fullName>
        <description>General Information FAQ&apos;s</description>
        <label>FAQ</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <description>General Purpose Information</description>
        <label>Information</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <label>Internal</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <description>General information keywords</description>
        <label>Keywords</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>General Information Purpose</description>
        <label>Purpose</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reminders_Quick_Tips__c</fullName>
        <description>General information reminders and quick tips</description>
        <label>Reminders/Quick-Tips</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <label>General Information</label>
    <pluralLabel>General Information</pluralLabel>
</CustomObject>